# fastapi_shortener

./: README.md  docker-compose.yaml
app/: .env-example  main.py  pyproject.toml
app/api/: router.py
app/api/dependencies/: collections.py
app/api/routes/: links.py  redirects.py
app/core/: config.py
app/db/: sessions.py
app/db/repositories/: links.py
app/schemas/: links.py
app/utils/: shortener.py
