[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Arturo Cuicas <arturo.cuicas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
redis = "^5.2.0"
motor = "^3.6.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
